--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="main">
       <h1>Hi, my name is <span id="name">Kiss Tamás</span></h1>
       <p>
-        A student based in Jászberény, Hungary with a little knowledge of html,
+        A student based in Hungary with a little knowledge of html,
         css, python and a very little astro. 
         <br>While also having interest in langs like swift and c#.
       </p>
